# Allium

./: AGENTS.md  Cargo.toml  Makefile  deny.toml  devenv.nix
.github/workflows/: allium.yml
crates/activity-tracker/src/view/: activity_tracker.rs
crates/allium-launcher/: Cargo.toml
crates/allium-launcher/src/: allium_launcher.rs  consoles.rs  ota.rs
crates/allium-launcher/src/entry/: app.rs  directory.rs  game.rs  lazy_image.rs  mod.rs
crates/allium-launcher/src/view/: app.rs  entry_list.rs
crates/allium-launcher/src/view/recents/: recents_carousel.rs
crates/allium-launcher/src/view/settings/: about.rs  mod.rs  power.rs  system.rs  theme.rs
crates/allium-menu/: Cargo.toml
crates/allium-menu/src/: allium_menu.rs  lib.rs  main.rs
crates/allium-menu/src/view/: guide_selector.rs  ingame_menu.rs  mod.rs  text_reader.rs
crates/alliumd/: Cargo.toml
crates/alliumd/src/: alliumd.rs
crates/common/: Cargo.toml
crates/common/src/: command.rs  constants.rs  database.rs  power.rs  resources.rs  stylesheet.rs
crates/common/src/platform/: mod.rs  simulator.rs
crates/common/src/platform/miyoo/: mod.rs  usb_audio.rs
crates/common/src/view/: battery_indicator.rs  button_hint.rs  button_hints.rs  button_icon.rs  label.rs  mod.rs  row.rs  settings_list.rs  wifi_indicator.rs
crates/common/src/view/input/: keyboard.rs  toggle.rs
crates/screenshot-viewer/: Cargo.toml
static/.allium/config/: consoles.toml
static/.allium/cores/ffplay/: launch.sh
static/.allium/locales/de-DE/: main.ftl
static/.allium/locales/en-US/: langs.ftl  main.ftl
static/.allium/locales/es-ES/: main.ftl
static/.allium/locales/es-LA/: main.ftl
static/.allium/locales/fr-FR/: main.ftl
static/.allium/locales/id-ID/: main.ftl
static/.allium/locales/it-IT/: main.ftl
static/.allium/locales/ja-JP/: main.ftl
static/.allium/locales/ro-RO/: main.ftl
static/.allium/locales/zh-CN/: main.ftl
static/.allium/locales/zh-HK/: main.ftl
static/.allium/locales/zh-TW/: main.ftl
