[workspace]
members = [
    "crates/common",
    "crates/alliumd",
    "crates/allium-launcher",
    "crates/allium-menu",
    "crates/activity-tracker",
    "crates/ffi",
    "crates/myctl",
    "crates/say",
    "crates/screenshot",
    "crates/screenshot-viewer",
    "crates/show",
]
exclude = [
    "third-party/dufs"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
base32 = "0.5.1"
bindgen = "0.72.1"
bytemuck = "1.21.0"
chrono = "0.4.42"
clap = "4.5"
console-subscriber = "0.5.0"
tiny-skia = "0.11"
winit = "0.30"
softbuffer = "0.4"
enum-map = "2.7.3"
evdev = "0.13.2"
fast_image_resize = "5.3.0"
fluent-templates = { version = "0.13.1", default-features = false, features = ["walkdir"] }
framebuffer = "0.3.1"
futures = "0.3.31"
image = { version = "=0.25.6", default-features = false }
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.28"
nix = "0.29"
qrcode = "0.14.1"
quick-xml = "0.38.3"
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = "0.37"
rusqlite_migration = "2.3.0"
rusttype = "0.9.3"
sdl2 = "0.38.0"
serde = "1.0.228"
serde_json = "1.0.145"
serial_test = "3.2.0"
sha2 = "0.10"
simple_logger = { version = "5.1.0", default-features = false }
strum = "0.27.2"
sysfs_gpio = "0.6.2"
sysinfo = "0.37.2"
tokio = "1.48.0"
toml = "0.9.8"
type-map = "0.5.1"
wait-timeout = "0.2.1"

# Following: https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

# allium-launcher will not be running at the same time as games,
# so size is not as important as speed.
[profile.release.package.allium-launcher]
opt-level = 3
